update app patho cat

--- a/docker-compose.yml.template
+++ b/docker-compose.yml.template
@@ -61,11 +61,11 @@ services:
             - DSPACE_HOST=§§INSTANCE-dspace-angular
             - DSPACE_NAMESPACE=/
             - DSPACE_PORT=4000
-            - DSPACE_SSL="false"
+            - DSPACE_SSL=false
             - DSPACE_REST_HOST=§§INSTANCE-rest.silicolabv4.bibbox.org
             - DSPACE_REST_PORT=80
             - DSPACE_REST_NAMESPACE=/server
-            - DSPACE_REST_SSL="false"
+            - DSPACE_REST_SSL=false
         build:
             context: ./images/src/
             dockerfile: Dockerfile
