--- a/docker-compose.yml.template
+++ b/docker-compose.yml.template
@@ -33,6 +33,7 @@ services:
             - ./images/ROOT:/usr/local/tomcat/webapps/ROOT
             - ./images/configs/local.cfg.template:/dspace/config/local.cfg.template
             - ./images/configs/sed.sh:/dspace/config/sed.sh
+            - ./images/configs/startup.sh:/dspace/config/startup.sh
             - ./images/rel.xml:/dspace/config/entities/relationship-types.xml
         entrypoint:
             - /bin/bash
@@ -55,7 +56,7 @@ services:
                     <name-map collection-handle="123456789/28" submission-name="Journal"/> \
                     <name-map collection-handle="123456789/29" submission-name="JournalVolume"/> \
                     <name-map collection-handle="123456789/30" submission-name="JournalIssue"/>' /dspace/config/item-submission.xml
-                catalina.sh run
+                bash /dspace/config/startup.sh
     
     §§INSTANCE-dspace-angular:
         container_name: §§INSTANCE-dspace-angular
